bugfix, visibility with toolbox on/off

--- a/css/utils/help.css
+++ b/css/utils/help.css
@@ -110,7 +110,7 @@
    right: 200px;
    border: ridge 4px #555;
    width: 350px;
-   height: 240px;
+   height: 250px;
    top: 100px;
    left: 550px;
    margin: 0px;
